--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <title>SMNP Demo app</title>
 </head>
@@ -23,20 +23,23 @@
                     <img src="./assets/Ubuntu-logo.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Ubuntu Linux Pc</h5>
-                        <a href="#" class="btn btn-primary">Monitear</a>
+                        <span id="ubuntu" class="btn btn-primary">Monitear</span>
                     </div>
                 </div>
                 <div class="card col-md-6">
                     <img src="./assets/windows-10-logo.jpg" class=" card-img-top " alt="... ">
                     <div class="card-body ">
                         <h5 class="card-title ">Windows 10 Pc</h5>
-                        <a href="# " class="btn btn-primary ">Monitear</a>
+                        <span id="windows" class="btn btn-primary">Monitear</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js "></script>
+    <script src="./js/socket-client.js"></script>
 </body>
 
 </html>
