--- a/public/index.html
+++ b/public/index.html
@@ -50,23 +50,23 @@
                 <div class="w-100"></div>
                 <div class="col">
                     <h6 class="secondary">Descripción
-                        <p id="description" class="mx-1 text-primary">Intel</p>
+                        <p id="description" class="mx-1 text-primary"></p>
                     </h6>
                 </div>
                 <div class="w-100"></div>
                 <div class="col">
                     <h6>Servicios
-                        <p id="services" class="mx-1 text-primary">72</p>
+                        <p id="services" class="mx-1 text-primary"></p>
                     </h6>
                 </div>
                 <div class="col">
                     <h6>Tiempo
-                        <p id="time" class="mx-1 text-primary">72 hora</p>
+                        <p id="time" class="mx-1 text-primary"></p>
                     </h6>
                 </div>
                 <div class="col">
                     <h6>Memoria
-                        <p id="memory" class="mx-1 text-primary">16 GB</p>
+                        <p id="memory" class="mx-1 text-primary"></p>
                     </h6>
                 </div>
             </div>
@@ -74,6 +74,7 @@
         <div class="my-4 container">
             <div class="row">
                 <div class="col-2">
+                    <p id="valor"></p>
                     <h6><strong>CPU</strong></h6>
                 </div>
                 <div class="col-10">
