--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div id="panel">
         <h1 id="title" class="mx-5 my-4 text-secondary "></h1>
 
         <div class="container">
